# GameOfLife-OpenCl

./: CMakeLists.txt  FindOpenCL.cmake  GameOfLifeCl.kdev4  main.cpp
include/: CLheader.hpp  CLsetup.hpp  board.hpp  cl.hpp  field.h  opencl_errorcodes.hpp
kernels/: broadcastNeighbourhoods.cl  clearBuffer.cl  fixOverlappingRegions.cl  step.cl  updateFields.cl
src/: CLsetup.cpp  board.cpp  opencl_errorcodes.cpp
